--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
 
 <body>
 
+    <form>
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname">
+      </form>
+     
+      <p>Choose your favorite Web language:</p>
+
+<form>
+  <input type="radio" id="html" name="fav_language" value="HTML">
+  <label for="html">HTML</label><br>
+  <input type="radio" id="css" name="fav_language" value="CSS">
+  <label for="css">CSS</label><br>
+  <input type="radio" id="javascript" name="fav_language" value="JavaScript">
+  <label for="javascript">JavaScript</label>
+</form>
+
     <!-- Headings
     <h1> This is H1 Tag</h1>
     <h2> This H2 Heading</h2>
@@ -89,7 +107,6 @@
   </p>
 
 
-  bbktknbknbknbktkb
 
  <p> H <sub>2</sub></p>
 
