--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
 
 
-<head>      <!--   information related to your html document ,we dont want to display on browser -->
+<head>   
+       <!--  information related to your html document ,we dont want to display on browser  -->
+
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -193,6 +195,7 @@
  <h2> LINKS IN HTML </h2>
 
  <a href="#"> This is a link </a>
+ <a href="+">   the offer </a>
 
  <br>
 
