--- a/inputs.html
+++ b/inputs.html
@@ -9,6 +9,13 @@
 <body>
 
     <h1> HTML INPUTS</h1>
+    <form action="/action_page.php">
+        <label for="fname">First name:</label><br>
+        <input type="text" id="fname" name="fname" value="NKR"><br>
+        <label for="lname">Last name:</label><br>
+        <input type="text" id="lname" name="lname" value="ROY"><br><br>
+        <input type="submit" value="Submit">
+      </form>
 
     <input type="text" placeholder="username">
     <br>
