--- a/inputs.html
+++ b/inputs.html
@@ -8,6 +8,20 @@
 </head>
 <body>
 
+     <h1>Form Validation Example</h1>
+  <h2>Please enter your name</h2>
+
+  <form action="validation_example.html" method="post">
+    <label for="first_name">First name:</label>
+    <input id="first_name" type="text" />
+    
+    <label for="last_name">Last name:</label>
+    <input id="last_name" type="text" />
+    
+    <input type="submit" value="Submit" />
+  </form>
+</body>
+
     <h1> HTML INPUTS</h1>
     <form action="/action_page.php">
         <label for="fname">First name:</label><br>
