--- a/media.html
+++ b/media.html
@@ -7,12 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<p>
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id dignissimos repudiandae quam impedit similique! Molestiae, possimus ipsum at, labore veritatis laborum neque explicabo molestias magnam dignissimos nostrum. Ipsam, perferendis quibusdam.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus at tempore aliquid mollitia impedit hic, culpa dolores dolorem nam excepturi iusto nostrum quos quas consequatur, nesciunt nemo amet, omnis veritatis?
-</p>
-
-
-    
+    <h1>
+        Hello World Are you ready to get an ideas
+    </h1>
 </body>
 </html>
