--- a/table.html
+++ b/table.html
@@ -15,7 +15,7 @@
 
         <thead>
 
-            <tr> <th colspan="6"> MCA TIMETABLE</th></tr>
+            <tr> <th colspan="6"> M C A TIMETABLE 2023</th></tr>
         <thead>
 
             <tr>
