--- a/new.html
+++ b/new.html
@@ -9,8 +9,9 @@
 <body>
 
     <h1> Mercedes Buying Page</h1>
-    <h1>Benz</h1>
+    <h1>Benzg</h1>
     <h2>Mercedes Benz</h2>
+    <h3>Benz for life </h3>
 
     <header>
 
