--- a/inputs.html
+++ b/inputs.html
@@ -21,6 +21,7 @@
 </body>
 
     <h1> HTML INPUTS</h1>
+    <h2>HTML pro</h2>
     <form action="/action_page.php">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="NKR"><br>
