--- a/inputs.html
+++ b/inputs.html
@@ -31,6 +31,7 @@
       </form>
 
     <input type="text" placeholder="username">
+    <input type="text" placeholder="Number">
     <br>
     <br>
 
