--- a/inputs.html
+++ b/inputs.html
@@ -36,6 +36,8 @@
     <br>
 
     <input type="number" placeholder="add a number">
+    <input type="number" placeholder="add a number">
+
 
     <br>
     <br>
@@ -45,7 +47,7 @@
     <br>
     <br>
 
-    <input type="email" placeholder="email">
+    <input type="email Gmail" placeholder="email">
     <br>
     <br>
 
