--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
 
  <a href="dummy.html#special-para"> go to special paragraph</a>
 
+ <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusamus quisquam molestiae eos, consequuntur aliquid assumenda nulla id aspernatur laudantium similique atque eius eaque delectus quam maxime, est pariatur non.</p>
 
 
 
