--- a/inputs.html
+++ b/inputs.html
@@ -98,7 +98,7 @@
 
     <input type="">
 
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. A at, eum ipsam facere dolorum ut enim hic tempora incidunt pariatur earum natus saepe harum doloribus numquam odio libero dolor. Quo.
   
 
 
