--- a/media.html
+++ b/media.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello our bhaie</h1>
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus magnam quo, doloremque sunt quas consequuntur ipsa aspernatur! Iusto quaerat expedita quos qui veritatis aut, voluptates at quam placeat adipisci.
         
 </body>
 </html>
