--- a/media.html
+++ b/media.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Hello our bhaie</h1>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis natus magnam quo, doloremque sunt quas consequuntur ipsa aspernatur! Iusto quaerat expedita quos qui veritatis aut, voluptates at quam placeat adipisci.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque beatae saepe quos laborum? Officia exercitationem dolor veniam est ipsa aliquid quo rerum praesentium inventore distinctio, excepturi, itaque accusantium rem illum?
-        
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit recusandae dignissimos id voluptatibus enim ipsam voluptas, ipsa et iure quidem exercitationem, laborum aperiam dicta. Aliquid est molestias voluptas ipsum dignissimos?
+    
 </body>
 </html>
