--- a/media.html
+++ b/media.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Hello our bhaie</h1>
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit recusandae dignissimos id voluptatibus enim ipsam voluptas, ipsa et iure quidem exercitationem, laborum aperiam dicta. Aliquid est molestias voluptas ipsum dignissimos?
-    
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi dolorum labore omnis, quod in magnam asperiores minima eos laborum fuga iste accusamus natus hic, quaerat repudiandae quas. Natus, autem aliquam.
 </body>
 </html>
