--- a/inputs.html
+++ b/inputs.html
@@ -85,6 +85,7 @@
     <textarea ></textarea>
 
     <br><br>
+    <br><br>
 
 
     <input type="date">
@@ -98,22 +99,8 @@
 
     <input type="">
 
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. A at, eum ipsam facere dolorum ut enim hic tempora incidunt pariatur earum natus saepe harum doloribus numquam odio libero dolor. Quo.
-  
-Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem repellat quas odio similique velit vero debitis vel, deleniti, inventore repellendus at minus. Autem provident, cumque recusandae esse quaerat laborum blanditiis!
-
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum voluptatibus aspernatur velit ut exercitationem quia ducimus accusantium cum perferendis blanditiis, ipsam soluta temporibus ipsum placeat modi esse quibusdam, officiis quisquam?
-Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea cupiditate velit expedita quas a iure, laudantium illo repudiandae ab error quae, quam, consequatur vero enim unde quod libero optio quidem!
-Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reprehenderit cupiditate dolor a asperiores cumque. Fugiat accusantium veritatis, natus, facere ullam dolore exercitationem enim error eligendi ad debitis, sequi nostrum pariatur?
-
-
-  
-
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi corrupti porro perspiciatis. Quas, modi porro placeat molestiae esse, fugit natus quis omnis ipsum incidunt nisi. Vero quae iusto rem porro?
-
-
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea reiciendis nobis rerum. Atque beatae ipsam error fugit officiis, nemo, voluptas temporibus cupiditate assumenda dolorum consequuntur vel eius ratione repudiandae aliquid.
+ <label for=""></label>
 
     
 </body>
