--- a/inputs.html
+++ b/inputs.html
@@ -98,7 +98,7 @@
     <br><br>
 
     <input type="">
-
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione maxime nam velit qui et quaerat quisquam nobis aliquam rem distinctio, veniam blanditiis ipsum dicta. Adipisci error et quas dicta mollitia.
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea reiciendis nobis rerum. Atque beatae ipsam error fugit officiis, nemo, voluptas temporibus cupiditate assumenda dolorum consequuntur vel eius ratione repudiandae aliquid.
  <label for=""></label>
 
