--- a/inputs.html
+++ b/inputs.html
@@ -99,7 +99,8 @@
 
     <input type="">
 Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione maxime nam velit qui et quaerat quisquam nobis aliquam rem distinctio, veniam blanditiis ipsum dicta. Adipisci error et quas dicta mollitia.
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea reiciendis nobis rerum. Atque beatae ipsam error fugit officiis, nemo, voluptas temporibus cupiditate assumenda dolorum consequuntur vel eius ratione repudiandae aliquid.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi placeat, nam laudantium veniam nulla delectus rerum velit beatae temporibus praesentium nemo molestias cum, magni, deleniti consectetur ullam ad expedita fugiat?   
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea reiciendis nobis rerum. Atque beatae ipsam error fugit officiis, nemo, voluptas temporibus cupiditate assumenda dolorum consequuntur vel eius ratione repudiandae aliquid.
  <label for=""></label>
 
     
