--- a/inputs.html
+++ b/inputs.html
@@ -32,6 +32,7 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="ROY"><br><br>
         <input type="submit" value="Submit">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatum consequuntur, iure, cumque praesentium eveniet impedit ducimus perferendis ipsum doloremque ad porro blanditiis cum dicta vitae. Veritatis suscipit impedit laudantium.
       </form>
 
     <input type="text" placeholder="username">
@@ -98,9 +99,7 @@
     <br><br>
 
     <input type="">
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione maxime nam velit qui et quaerat quisquam nobis aliquam rem distinctio, veniam blanditiis ipsum dicta. Adipisci error et quas dicta mollitia.
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi placeat, nam laudantium veniam nulla delectus rerum velit beatae temporibus praesentium nemo molestias cum, magni, deleniti consectetur ullam ad expedita fugiat?   
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea reiciendis nobis rerum. Atque beatae ipsam error fugit officiis, nemo, voluptas temporibus cupiditate assumenda dolorum consequuntur vel eius ratione repudiandae aliquid.
+ 
  <label for=""></label>
 
     
