--- a/inputs.html
+++ b/inputs.html
@@ -33,6 +33,7 @@
         <input type="text" id="lname" name="lname" value="ROY"><br><br>
         <input type="submit" value="Submit">
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatum consequuntur, iure, cumque praesentium eveniet impedit ducimus perferendis ipsum doloremque ad porro blanditiis cum dicta vitae. Veritatis suscipit impedit laudantium.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque veniam consequuntur impedit unde laudantium sed repellat, nemo beatae nostrum, itaque temporibus nam iste, corporis earum deserunt officiis eos. Sequi, maxime.
       </form>
 
     <input type="text" placeholder="username">
