--- a/inputs.html
+++ b/inputs.html
@@ -32,9 +32,7 @@
         <label for="lname">Last name:</label><br>
         <input type="text" id="lname" name="lname" value="ROY"><br><br>
         <input type="submit" value="Submit">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugiat voluptatum consequuntur, iure, cumque praesentium eveniet impedit ducimus perferendis ipsum doloremque ad porro blanditiis cum dicta vitae. Veritatis suscipit impedit laudantium.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Totam ullam officiis vel nemo accusantium, fuga incidunt debitis. Animi, laboriosam quas. Ipsa voluptas eius natus ex quas optio labore perspiciatis cum!
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cumque veniam consequuntur impedit unde laudantium sed repellat, nemo beatae nostrum, itaque temporibus nam iste, corporis earum deserunt officiis eos. Sequi, maxime.
+      
       </form>
 
     <input type="text" placeholder="username">
@@ -46,7 +44,7 @@
     <input type="number" placeholder="add a number">
 
 
-    <br>
+    <br>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur porro earum illo vero ut delectus inventore, repudiandae maxime quam voluptatem consequuntur rem repellat soluta nam hic quas eum aut assumenda?
     <br>
 
     <input type="checkbox" checked >
