--- a/table.html
+++ b/table.html
@@ -92,8 +92,6 @@
 
 
     </table>
-Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab, suscipit nihil illum vero dignissimos consectetur aperiam quia. In, odio sunt tempore, accusantium ab nihil ipsum dolorum doloribus soluta officiis eligendi.
-
-    
+Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe ab ratione recusandae dolores explicabo earum obcaecati molestias unde voluptatum adipisci assumenda quibusdam, modi cupiditate veniam placeat hic sint ad aut.
 </body>
 </html>
