--- a/new.html
+++ b/new.html
@@ -207,9 +207,7 @@
 
 
     </footer>
-
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus dolore voluptate, in earum totam alias sequi velit obcaecati facilis, delectus nisi architecto maiores natus tempore quos distinctio perferendis, doloribus quo.
-
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt molestias ab eveniet, beatae modi illum, esse vero ipsam, recusandae eius earum rem ipsa laborum maxime. Dolores provident et beatae aliquid!
     <div style="margin-top:500px"></div>
 </body>
 </html>
