--- a/media.html
+++ b/media.html
@@ -8,11 +8,11 @@
 </head>
 <body>
     
-    <dev>
-        <li>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil doloremque enim, mollitia, rem magni excepturi ea quis, explicabo quo eligendi inventore! Praesentium magni, excepturi tempora voluptatum quas hic atque est!
-        </li>
-    </dev>
+   <div>
+    <li>
+        www.google.com
+    </li>
+   </div>
     
 </body>
 </html>
