--- a/table.html
+++ b/table.html
@@ -8,23 +8,7 @@
 </head>
 <body>
 
-    <h1> HTML TABLES </h1>
-    <h3>
-        rock on 
-    </h3>
-    <li>
-        <ul>
-            track wood 
-        </ul>
-    </li>
-    <h6>
-        heavy Rock 
-        <h3>
-            hi tide 
-        </h3>
-    <h4>
-        five x
-    <h2>Happy Pro @ </h2>
+    
 
     <table border="9" cellspacing="10" cellpadding="5">
      
@@ -32,6 +16,7 @@
         <thead>
 
             <tr> <th colspan="6"> M C A TIMETABLE 2023</th></tr>
+            <tr> <th colspan="6"> M C A TIMETABLE 2024</th></tr>
         <thead>
 
             <tr>
