--- a/index.html
+++ b/index.html
@@ -210,6 +210,9 @@
  <a href="http://facebook.com"> Visit facebook page</a>
 
  <br>
+ <pr>
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis voluptates neque molestias quo earum id at, odit doloribus alias perferendis nobis labore porro fugiat fugit qui, sint praesentium natus reiciendis.
+ </pr>
 
  <a href="#paragraphs"> go to special paragraph</a>
 
@@ -217,81 +220,6 @@
 
  <a href="dummy.html#special-para"> go to special paragraph</a>
 
- <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat accusamus quisquam molestiae eos, consequuntur aliquid assumenda nulla id aspernatur laudantium similique atque eius eaque delectus quam maxime, est pariatur non.</p>
-
-<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat animi aspernatur provident necessitatibus. Dicta maiores cumque deleniti architecto dolor vero nam nihil reiciendis aspernatur facilis dolorum, voluptatibus a minus fugiat?</p>
-<p><li</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti alias qui accusantium officiis aut cum! Tempora modi voluptates magnam necessitatibus assumenda, aut eius reprehenderit voluptatibus quae voluptatum doloribus beatae laboriosam.
-Aliquam sequi accusantium amet cumque quae laborum. Maiores fuga vero, impedit voluptatum repellat porro ex, ut eum cupiditate voluptates sunt in adipisci odit, saepe deserunt natus accusantium possimus amet laboriosam?
-Ea officia at reprehenderit totam placeat assumenda impedit delectus laudantium dolore similique, repudiandae nulla asperiores distinctio dolorum, minima iste facilis vero nemo inventore? Culpa temporibus, dolorem facere repudiandae eum cupiditate.
-Vero perspiciatis quibusdam repellendus beatae nisi tenetur quis ad, culpa cupiditate non ex veniam et est fuga quas! Facere voluptates eos, dicta ipsam hic aut consectetur odit fugit placeat iure?
-
-
-
-
-Impedit amet accusamus deserunt! Qui ipsum, voluptatem, nam fuga, maiores magni nemo similique perspiciatis sequi hic repellat voluptas consequuntur corporis iusto dolores. Quae quam autem sequi ipsum ea iure dicta.
-Tempore fugiat deserunt sunt tempora ullam cupiditate dolore nobis necessitatibus eius repellat molestias pariatur eveniet beatae illo quod, est nisi, perspiciatis ipsum eaque amet error maxime excepturi. Qui, autem non.
-Quaerat officia ratione perspiciatis saepe deleniti. Laboriosam et voluptatibus, deleniti alias, consequuntur nostrum ratione iure id enim dicta nemo molestiae eligendi placeat! Placeat unde et ea tenetur atque repudiandae architecto?
-Exercitationem quaerat optio nobis atque dolor voluptatum. Dignissimos dicta repudiandae aliquid sapiente consectetur error, quis officiis rem. Accusantium ipsum praesentium quae magni, est, quisquam perspiciatis nobis atque amet rem numquam!
-Reiciendis sint dolor, modi itaque eveniet iure molestiae ratione quo? Adipisci, eum aperiam ex odit suscipit praesentium cumque sunt reprehenderit facere quibusdam repellat non harum voluptate quia quod dicta sint.
-Voluptatibus in adipisci, rerum dolorum nostrum assumenda soluta recusandae magni officiis vitae modi unde quae atque, dolor nobis eveniet nihil quis voluptate veritatis voluptas ratione? Natus iusto temporibus quae nulla!
-Quasi atque obcaecati rerum nesciunt sapiente ex corporis deserunt quos dolore modi, repellat, ipsam dolor adipisci amet excepturi expedita nisi odio est saepe praesentium debitis numquam harum illum. Unde, reiciendis.
-Distinctio quod alias praesentium unde. Modi aperiam rerum esse eaque quis asperiores iure libero reprehenderit doloribus nobis beatae magni saepe quo, magnam velit soluta quae optio eligendi tenetur quos voluptatem?
-Et ipsam, pariatur expedita vel ab inventore nihil minima ex illo, iste eius, voluptatibus neque magni. Nemo qui, recusandae doloribus quia assumenda fugit ratione eligendi, repudiandae quidem totam corporis facere?
-Laudantium fugit quas nesciunt quo hic ipsa porro odit pariatur ratione facilis? Voluptatum iste ducimus pariatur perferendis repellat harum a quidem ad vitae, optio corrupti ea exercitationem, voluptate, rerum totam.
-Fuga quos mollitia, sit ratione culpa odio ex unde quibusdam magnam officiis possimus debitis odit. Quis, sunt iure impedit vitae cupiditate nisi voluptate ab accusantium nam inventore iusto illo ipsum.
-Quod eveniet officiis voluptate voluptates modi maxime, non minima, porro cum perspiciatis veniam numquam voluptatem officia, aut nemo tenetur! Quibusdam reiciendis pariatur tempore modi odit. Repudiandae, distinctio itaque? Harum, velit!
-Quasi corrupti tenetur obcaecati quae, voluptatem assumenda exercitationem dolorem rem velit? Libero tempore veniam, ratione vitae laborum rerum quas. Sit quos architecto ipsum aspernatur itaque tempore non nemo corrupti error?
-Animi incidunt doloribus nulla quae quaerat blanditiis voluptate sapiente similique fuga dolorum consequuntur impedit et est temporibus cum id illum, nostrum maiores ut! Illum, minima praesentium accusantium ipsam quisquam est.</p>
-
-<br>
-
-
-<div >
-
-     <h2 class="paragraphs"> inside div</h2>
-     <p  class="paragraphs"> this is first paragraph</p>
-     <p class="paragraphs"> this is second paragraph</p>
-     <p class="paragraphs"> this is third paragraph</p>
-
-</div>
  
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div style="margin-top:500px"></div>
-</body>
-
-
-
-</html>
