--- a/index.html
+++ b/index.html
@@ -212,10 +212,8 @@
  <br>
  <pr>
     <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, fuga dicta quae mollitia libero, cumque sint sit consequatur laudantium quod nihil veniam voluptates minima distinctio quibusdam ex recusandae voluptas temporibus!
+        <li> www</li>
     </p>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis voluptates neque molestias quo earum id at, odit doloribus alias perferendis nobis labore porro fugiat fugit qui, sint praesentium natus reiciendis.
- </pr>
 
  <a href="#paragraphs"> go to special paragraph</a>
 
