--- a/inputs.html
+++ b/inputs.html
@@ -26,6 +26,9 @@
 
     <h1> HTML INPUTS</h1>
     <h2>HTML pro</h2>
+    <li>
+      love and top in town 
+    </li>
     <form action="/action_page.php">
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname" value="NKR"><br>
