--- a/inputs.html
+++ b/inputs.html
@@ -26,6 +26,8 @@
 
     <h1> HTML INPUTS</h1>
     <h2>HTML pro</h2>
+    <li> <html></html>
+      </li>
     <li>
       love and top in town 
     </li>
