--- a/index.html
+++ b/index.html
@@ -280,6 +280,8 @@
     <li> this is second item</li>
     <li> this is third item</li>
     <li> this is fourth item</li>
+    <li> this is fourth item</li>
+
     <li> this is fifth item</li>
  </ol>
 
